ifcviewer/ifcengine/include/IfcEngine.cs


		[DllImport(IFCEngineDLL, EntryPoint = "SetSPFFHeaderItem")]
		public static extern int_t SetSPFFHeaderItem(int_t model, int_t itemIndex, int_t itemSubIndex, int_t valueType, byte[] value);

		/// <summary>
		///		GetSPFFHeaderItem                                       (http://rdf.bg/ifcdoc/CS64/GetSPFFHeaderItem.html)
		///
		///	This call can be used to read a specific header item, the source code example is larger to show and explain how this call can be used.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetSPFFHeaderItem")]
		public static extern int_t GetSPFFHeaderItem(int_t model, int_t itemIndex, int_t itemSubIndex, int_t valueType, out IntPtr value);

		/// <summary>
		///		GetSPFFHeaderItemUnicode                                (http://rdf.bg/ifcdoc/CS64/GetSPFFHeaderItemUnicode.html)
		///
		///	This call can be used to write a specific header item, the source code example is larger to show and explain how this call can be used.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetSPFFHeaderItemUnicode")]
		public static extern int_t GetSPFFHeaderItemUnicode(int_t model, int_t itemIndex, int_t itemSubIndex, string buffer, int_t bufferLength);

		[DllImport(IFCEngineDLL, EntryPoint = "GetSPFFHeaderItemUnicode")]
		public static extern int_t GetSPFFHeaderItemUnicode(int_t model, int_t itemIndex, int_t itemSubIndex, byte[] buffer, int_t bufferLength);

        //
        //  Instance Reading API Calls
        //

		/// <summary>
		///		sdaiGetADBType                                          (http://rdf.bg/ifcdoc/CS64/sdaiGetADBType.html)
		///
		///	This call can be used to get the used type within this ADB type.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetADBType")]
		public static extern int_t sdaiGetADBType(int_t ADB);

		/// <summary>
		///		sdaiGetADBTypePath                                      (http://rdf.bg/ifcdoc/CS64/sdaiGetADBTypePath.html)
		///
		///	This call can be used to get the path of an ADB type.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetADBTypePath")]
		public static extern IntPtr sdaiGetADBTypePath(int_t ADB, int_t typeNameNumber);

		/// <summary>
		///		sdaiGetADBTypePathx                                     (http://rdf.bg/ifcdoc/CS64/sdaiGetADBTypePathx.html)
		///
		///	This call is the same as sdaiGetADBTypePath, however can be used by porting to languages that have issues with returned char arrays.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetADBTypePathx")]
		public static extern void sdaiGetADBTypePathx(int_t ADB, int_t typeNameNumber, out IntPtr path);

		public static string sdaiGetADBTypePathx(int_t ADB, int_t typeNameNumber)
		{
			IntPtr path = IntPtr.Zero;
			sdaiGetADBTypePathx(ADB, typeNameNumber, out path);
			return System.Runtime.InteropServices.Marshal.PtrToStringAnsi(path);
		}

		/// <summary>
		///		sdaiGetADBValue                                         (http://rdf.bg/ifcdoc/CS64/sdaiGetADBValue.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetADBValue")]
		public static extern int_t sdaiGetADBValue(int_t ADB, int_t valueType, out bool value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetADBValue")]
		public static extern int_t sdaiGetADBValue(int_t ADB, int_t valueType, out int_t value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetADBValue")]
		public static extern int_t sdaiGetADBValue(int_t ADB, int_t valueType, out double value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetADBValue")]
		public static extern int_t sdaiGetADBValue(int_t ADB, int_t valueType, out IntPtr value);

		/// <summary>
		///		sdaiCreateEmptyADB                                      (http://rdf.bg/ifcdoc/CS64/sdaiCreateEmptyADB.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiCreateEmptyADB")]
		public static extern int_t sdaiCreateEmptyADB();

		/// <summary>
		///		sdaiDeleteADB                                           (http://rdf.bg/ifcdoc/CS64/sdaiDeleteADB.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiDeleteADB")]
		public static extern void sdaiDeleteADB(int_t ADB);

		/// <summary>
		///		engiGetAggrElement                                      (http://rdf.bg/ifcdoc/CS64/engiGetAggrElement.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetAggrElement")]
		public static extern int_t engiGetAggrElement(int_t aggregate, int_t index, int_t valueType, out bool value);

		[DllImport(IFCEngineDLL, EntryPoint = "engiGetAggrElement")]
		public static extern int_t engiGetAggrElement(int_t aggregate, int_t index, int_t valueType, out int_t value);

		[DllImport(IFCEngineDLL, EntryPoint = "engiGetAggrElement")]
		public static extern int_t engiGetAggrElement(int_t aggregate, int_t index, int_t valueType, out double value);

		[DllImport(IFCEngineDLL, EntryPoint = "engiGetAggrElement")]
		public static extern int_t engiGetAggrElement(int_t aggregate, int_t index, int_t valueType, out IntPtr value);

		/// <summary>
		///		sdaiGetAggrByIndex                                      (http://rdf.bg/ifcdoc/CS64/sdaiGetAggrByIndex.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAggrByIndex")]
		public static extern int_t sdaiGetAggrByIndex(int_t aggregate, int_t index, int_t valueType, out bool value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAggrByIndex")]
		public static extern int_t sdaiGetAggrByIndex(int_t aggregate, int_t index, int_t valueType, out int_t value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAggrByIndex")]
		public static extern int_t sdaiGetAggrByIndex(int_t aggregate, int_t index, int_t valueType, out double value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAggrByIndex")]
		public static extern int_t sdaiGetAggrByIndex(int_t aggregate, int_t index, int_t valueType, out IntPtr value);

		/// <summary>
		///		engiGetAggrType                                         (http://rdf.bg/ifcdoc/CS64/engiGetAggrType.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetAggrType")]
		public static extern void engiGetAggrType(int_t aggregate, out int_t aggregateType);

		/// <summary>
		///		engiGetAggrTypex                                        (http://rdf.bg/ifcdoc/CS64/engiGetAggrTypex.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetAggrTypex")]
		public static extern void engiGetAggrTypex(int_t aggregate, out int_t aggregateType);

		/// <summary>
		///		sdaiGetAttr                                             (http://rdf.bg/ifcdoc/CS64/sdaiGetAttr.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAttr")]
		public static extern int_t sdaiGetAttr(int_t instance, int_t attribute, int_t valueType, out bool value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAttr")]
		public static extern int_t sdaiGetAttr(int_t instance, int_t attribute, int_t valueType, out int_t value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAttr")]
		public static extern int_t sdaiGetAttr(int_t instance, int_t attribute, int_t valueType, out double value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAttr")]
		public static extern int_t sdaiGetAttr(int_t instance, int_t attribute, int_t valueType, out IntPtr value);

		/// <summary>
		///		sdaiGetAttrBN                                           (http://rdf.bg/ifcdoc/CS64/sdaiGetAttrBN.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAttrBN")]
		public static extern int_t sdaiGetAttrBN(int_t instance, string attributeName, int_t valueType, out bool value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAttrBN")]
		public static extern int_t sdaiGetAttrBN(int_t instance, string attributeName, int_t valueType, out int_t value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAttrBN")]
		public static extern int_t sdaiGetAttrBN(int_t instance, string attributeName, int_t valueType, out double value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAttrBN")]
		public static extern int_t sdaiGetAttrBN(int_t instance, string attributeName, int_t valueType, out IntPtr value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAttrBN")]
		public static extern int_t sdaiGetAttrBN(int_t instance, byte[] attributeName, int_t valueType, out bool value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAttrBN")]
		public static extern int_t sdaiGetAttrBN(int_t instance, byte[] attributeName, int_t valueType, out int_t value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAttrBN")]
		public static extern int_t sdaiGetAttrBN(int_t instance, byte[] attributeName, int_t valueType, out double value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAttrBN")]
		public static extern int_t sdaiGetAttrBN(int_t instance, byte[] attributeName, int_t valueType, out IntPtr value);

		/// <summary>
		///		sdaiGetAttrBNUnicode                                    (http://rdf.bg/ifcdoc/CS64/sdaiGetAttrBNUnicode.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAttrBNUnicode")]
		public static extern int_t sdaiGetAttrBNUnicode(int_t instance, string attributeName, string buffer, int_t bufferLength);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAttrBNUnicode")]
		public static extern int_t sdaiGetAttrBNUnicode(int_t instance, byte[] attributeName, byte[] buffer, int_t bufferLength);

		/// <summary>
		///		sdaiGetStringAttrBN                                     (http://rdf.bg/ifcdoc/CS64/sdaiGetStringAttrBN.html)
		///
		///	This function is a specific version of sdaiGetAttrBN(..), where the valueType is sdaiSTRING.
		///	This call can be usefull in case of specific programming languages that cannot map towards sdaiGetAttrBN(..) directly,
		///	this function is useless for languages as C, C++, C#, JAVA, VB.NET, Delphi and similar as they are able to map sdaiGetAttrBN(..) directly.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetStringAttrBN")]
		public static extern IntPtr sdaiGetStringAttrBN(int_t instance, string attributeName);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetStringAttrBN")]
		public static extern IntPtr sdaiGetStringAttrBN(int_t instance, byte[] attributeName);

		/// <summary>
		///		sdaiGetInstanceAttrBN                                   (http://rdf.bg/ifcdoc/CS64/sdaiGetInstanceAttrBN.html)
		///
		///	This function is a specific version of sdaiGetAttrBN(..), where the valueType is sdaiINSTANCE.
		///	This call can be usefull in case of specific programming languages that cannot map towards sdaiGetAttrBN(..) directly,
		///	this function is useless for languages as C, C++, C#, JAVA, VB.NET, Delphi and similar as they are able to map sdaiGetAttrBN(..) directly.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetInstanceAttrBN")]
		public static extern int_t sdaiGetInstanceAttrBN(int_t instance, string attributeName);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetInstanceAttrBN")]
		public static extern int_t sdaiGetInstanceAttrBN(int_t instance, byte[] attributeName);
